--- a/index2.html
+++ b/index2.html
@@ -1440,31 +1440,38 @@
         font-size: 15px;
       }
       .weekday-row, .calendar-grid {
-        gap: 4px;
+        gap: 3px;
       }
       .weekday {
-        font-size: 11px;
+        font-size: 10px;
         padding: 3px 0;
       }
       .day-cell {
-        min-height: 102px;
-        padding: 6px;
-        gap: 5px;
+        min-height: 132px;
+        padding: 5px 4px;
+        gap: 4px;
+        justify-content: flex-start;
       }
       .day-num {
-        font-size: 14px;
+        font-size: 13px;
       }
       .day-meta-grid {
-        gap: 3px;
+        grid-template-columns: 1fr;
+        gap: 2px;
+        margin-top: 1px;
       }
       .day-meta {
-        font-size: 9.5px;
-        padding: 2px 4px;
-        border-radius: 7px;
-        min-height: 19px;
+        width: 100%;
+        font-size: 9px;
+        padding: 1px 3px;
+        border-radius: 6px;
+        min-height: 17px;
+        line-height: 1.2;
+        gap: 3px;
       }
       .day-meta strong {
-        font-size: 10px;
+        font-size: 9px;
+        letter-spacing: -0.01em;
       }
     }
   </style>
