--- a/index-novel.html
+++ b/index-novel.html
@@ -160,14 +160,63 @@
       letter-spacing: 0.01em;
     }
 
-    .layout {
+    .tab-nav {
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+
+    .tab-btn {
+      border: 1px solid #d8c7b3;
+      background: #fff8ee;
+      color: #6d4a32;
+      border-radius: 999px;
+      padding: 8px 14px;
+      font-size: 13px;
+      font-weight: 700;
+      cursor: pointer;
+      transition: all 0.16s ease;
+    }
+
+    .tab-btn.active {
+      border-color: transparent;
+      background: #7f3328;
+      color: #fff7eb;
+      box-shadow: 0 9px 18px rgba(90, 32, 24, 0.2);
+    }
+
+    .tab-panel {
+      display: none;
+    }
+
+    .tab-panel.active {
+      display: block;
+    }
+
+    .overview-grid {
       display: grid;
-      grid-template-columns: 1.04fr 1fr;
-      gap: 14px;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
       align-items: start;
     }
 
-    .column {
+    .overview-grid .span-2 {
+      grid-column: 1 / -1;
+    }
+
+    .single-grid {
+      display: grid;
+      gap: 12px;
+    }
+
+    .episode-layout {
+      display: grid;
+      grid-template-columns: 1.02fr 1fr;
+      gap: 12px;
+      align-items: start;
+    }
+
+    .episode-column {
       display: grid;
       gap: 12px;
     }
@@ -312,12 +361,24 @@
       flex-wrap: wrap;
     }
 
+    .item-head-actions {
+      display: flex;
+      gap: 6px;
+      align-items: center;
+    }
+
     .item-title {
       font-size: 12px;
       font-weight: 700;
       color: #6b3a2b;
       letter-spacing: 0.03em;
       text-transform: uppercase;
+    }
+
+    .item.selected {
+      border-color: #c59467;
+      background: #fff2e4;
+      box-shadow: inset 0 0 0 1px rgba(197, 148, 103, 0.26);
     }
 
     .mini-btn {
@@ -336,6 +397,12 @@
       color: #a74839;
     }
 
+    .mini-btn.active {
+      border-color: transparent;
+      background: #7f3328;
+      color: #fff8ee;
+    }
+
     .character-grid {
       display: grid;
       gap: 8px;
@@ -350,6 +417,15 @@
 
     .writing-box {
       min-height: 360px;
+    }
+
+    .editor-label {
+      font-size: 12px;
+      color: #7a6656;
+      border: 1px dashed #dbc9b5;
+      background: #fff7ee;
+      border-radius: 9px;
+      padding: 8px 10px;
     }
 
     .empty {
@@ -374,7 +450,8 @@
     }
 
     @media (max-width: 980px) {
-      .layout {
+      .overview-grid,
+      .episode-layout {
         grid-template-columns: 1fr;
       }
       .writing-box {
@@ -397,7 +474,9 @@
       }
       .form-grid,
       .character-grid,
-      .episode-grid {
+      .episode-grid,
+      .overview-grid,
+      .episode-layout {
         grid-template-columns: 1fr;
       }
       .btn {
@@ -440,9 +519,16 @@
       </div>
     </section>
 
-    <section class="layout">
-      <div class="column">
-        <article class="card" style="--delay:0.02s;">
+    <div class="tab-nav" id="tabNav">
+      <button class="tab-btn active" data-tab="overview">개요</button>
+      <button class="tab-btn" data-tab="characters">등장인물</button>
+      <button class="tab-btn" data-tab="setting">설정</button>
+      <button class="tab-btn" data-tab="episodes">에피소드</button>
+    </div>
+
+    <section class="tab-panel active" id="panel-overview">
+      <section class="overview-grid">
+        <article class="card span-2" style="--delay:0.02s;">
           <div class="title-row">
             <div>
               <h2>작품 개요</h2>
@@ -493,8 +579,12 @@
           </div>
           <div class="tag-list" id="keywordList"></div>
         </article>
+      </section>
+    </section>
 
-        <article class="card" style="--delay:0.14s;">
+    <section class="tab-panel" id="panel-characters">
+      <section class="single-grid">
+        <article class="card" style="--delay:0.08s;">
           <div class="title-row">
             <div>
               <h3>등장인물</h3>
@@ -504,8 +594,12 @@
           </div>
           <div class="list" id="characterList"></div>
         </article>
+      </section>
+    </section>
 
-        <article class="card" style="--delay:0.18s;">
+    <section class="tab-panel" id="panel-setting">
+      <section class="single-grid">
+        <article class="card" style="--delay:0.08s;">
           <div class="title-row">
             <div>
               <h3>세계관 / 마법 규칙</h3>
@@ -514,9 +608,11 @@
           </div>
           <textarea id="worldRule" placeholder="예: 마력은 기억을 대가로 사용한다. 황실 혈통만 성문 인장을 해제할 수 있다."></textarea>
         </article>
-      </div>
+      </section>
+    </section>
 
-      <div class="column">
+    <section class="tab-panel" id="panel-episodes">
+      <section class="episode-layout">
         <article class="card" style="--delay:0.06s;">
           <div class="title-row">
             <div>
@@ -528,26 +624,29 @@
           <div class="list" id="episodeList"></div>
         </article>
 
-        <article class="card" style="--delay:0.1s;">
-          <div class="title-row">
-            <div>
-              <h2>집필 에디터</h2>
-              <p class="sub">첫 문단부터 바로 작성해보세요.</p>
+        <div class="episode-column">
+          <article class="card" style="--delay:0.1s;">
+            <div class="title-row">
+              <div>
+                <h2>집필 에디터</h2>
+                <p class="sub">선택한 에피소드 기준으로 저장됩니다.</p>
+              </div>
             </div>
-          </div>
-          <textarea class="writing-box" id="manuscript" placeholder="장면을 작성하세요. 자동 저장됩니다."></textarea>
-        </article>
+            <p class="editor-label" id="episodeEditorLabel">현재 에피소드: -</p>
+            <textarea class="writing-box" id="manuscript" placeholder="장면을 작성하세요. 자동 저장됩니다."></textarea>
+          </article>
 
-        <article class="card" style="--delay:0.14s;">
-          <div class="title-row">
-            <div>
-              <h3>아이디어 메모</h3>
-              <p class="sub">대사, 장면, 반전 아이디어를 빠르게 적어두세요.</p>
+          <article class="card" style="--delay:0.14s;">
+            <div class="title-row">
+              <div>
+                <h3>아이디어 메모</h3>
+                <p class="sub">대사, 장면, 반전 아이디어를 빠르게 적어두세요.</p>
+              </div>
             </div>
-          </div>
-          <textarea id="ideaNote" placeholder="예: 17화 끝에서 반지의 주인이 바뀌는 반전"></textarea>
-        </article>
-      </div>
+            <textarea id="ideaNote" placeholder="예: 17화 끝에서 반지의 주인이 바뀌는 반전"></textarea>
+          </article>
+        </div>
+      </section>
     </section>
 
     <p class="footer-note">모든 내용은 브라우저 로컬 저장소에 자동 저장됩니다.</p>
@@ -556,6 +655,7 @@
   <script>
     const STORAGE_KEY = "romance-fantasy-studio-v1";
     const SAVE_DELAY = 450;
+    const VALID_TABS = ["overview", "characters", "setting", "episodes"];
 
     function makeId(prefix) {
       return `${prefix}-${Date.now()}-${Math.random().toString(16).slice(2, 6)}`;
@@ -578,11 +678,13 @@
         title: "",
         beat: "",
         tension: "mid",
-        status: "planned"
+        status: "planned",
+        manuscript: ""
       };
     }
 
     const state = {
+      activeTab: "overview",
       workTitle: "",
       workSubtitle: "",
       tone: "궁정 로맨스",
@@ -591,6 +693,7 @@
       characters: [defaultCharacter()],
       worldRule: "",
       episodes: [defaultEpisode()],
+      selectedEpisodeId: "",
       manuscript: "",
       ideaNote: "",
       updatedAt: 0
@@ -602,6 +705,8 @@
       exportBtn: document.getElementById("exportBtn"),
       importBtn: document.getElementById("importBtn"),
       importFile: document.getElementById("importFile"),
+      tabButtons: [...document.querySelectorAll(".tab-btn")],
+      tabPanels: [...document.querySelectorAll(".tab-panel")],
       saveStatus: document.getElementById("saveStatus"),
       wordStat: document.getElementById("wordStat"),
       workTitle: document.getElementById("workTitle"),
@@ -616,6 +721,7 @@
       worldRule: document.getElementById("worldRule"),
       addEpisodeBtn: document.getElementById("addEpisodeBtn"),
       episodeList: document.getElementById("episodeList"),
+      episodeEditorLabel: document.getElementById("episodeEditorLabel"),
       manuscript: document.getElementById("manuscript"),
       ideaNote: document.getElementById("ideaNote")
     };
@@ -624,11 +730,58 @@
       el.saveStatus.textContent = text;
     }
 
+    function ensureEpisodeSelection() {
+      if (!state.episodes.length) {
+        state.selectedEpisodeId = "";
+        return;
+      }
+      const exists = state.episodes.some((item) => item.id === state.selectedEpisodeId);
+      if (!exists) {
+        state.selectedEpisodeId = state.episodes[0].id;
+      }
+    }
+
+    function getSelectedEpisode() {
+      if (!state.episodes.length) return null;
+      ensureEpisodeSelection();
+      return state.episodes.find((item) => item.id === state.selectedEpisodeId) || null;
+    }
+
+    function setActiveTab(tab, persist = false) {
+      const next = VALID_TABS.includes(tab) ? tab : "overview";
+      state.activeTab = next;
+      el.tabButtons.forEach((btn) => {
+        btn.classList.toggle("active", btn.dataset.tab === next);
+      });
+      el.tabPanels.forEach((panel) => {
+        panel.classList.toggle("active", panel.id === `panel-${next}`);
+      });
+      if (persist) queueSave();
+    }
+
     function updateWordStat() {
-      const text = String(state.manuscript || "");
+      const episode = getSelectedEpisode();
+      const text = String(episode ? episode.manuscript || "" : "");
       const words = text.trim() ? text.trim().split(/\s+/u).filter(Boolean).length : 0;
       const chars = text.replace(/\s/g, "").length;
       el.wordStat.textContent = `${words.toLocaleString()} 어절 · ${chars.toLocaleString()} 글자`;
+    }
+
+    function syncEpisodeEditor() {
+      const episode = getSelectedEpisode();
+      if (!episode) {
+        el.manuscript.value = "";
+        el.manuscript.disabled = true;
+        el.episodeEditorLabel.textContent = "현재 에피소드: 없음";
+        updateWordStat();
+        return;
+      }
+      const idx = state.episodes.findIndex((item) => item.id === episode.id) + 1;
+      const title = String(episode.title || "").trim() || `Episode ${idx}`;
+      el.episodeEditorLabel.textContent = `현재 에피소드: ${title}`;
+      el.manuscript.disabled = false;
+      el.manuscript.value = episode.manuscript || "";
+      updateWordStat();
     }
 
     function renderKeywords() {
@@ -667,15 +820,19 @@
     }
 
     function renderEpisodes() {
+      ensureEpisodeSelection();
       if (!state.episodes.length) {
         el.episodeList.innerHTML = '<div class="empty">에피소드를 추가해 주세요.</div>';
         return;
       }
       el.episodeList.innerHTML = state.episodes.map((item, index) => `
-        <article class="item" data-episode-id="${item.id}">
+        <article class="item ${item.id === state.selectedEpisodeId ? "selected" : ""}" data-episode-id="${item.id}">
           <div class="item-head">
             <span class="item-title">Episode ${index + 1}</span>
-            <button class="mini-btn danger" data-remove-episode="${item.id}">삭제</button>
+            <div class="item-head-actions">
+              <button class="mini-btn ${item.id === state.selectedEpisodeId ? "active" : ""}" data-select-episode="${item.id}">${item.id === state.selectedEpisodeId ? "선택됨" : "선택"}</button>
+              <button class="mini-btn danger" data-remove-episode="${item.id}">삭제</button>
+            </div>
           </div>
           <div class="episode-grid">
             <input type="text" data-field="title" value="${escapeHTML(item.title)}" placeholder="화 제목 / 장면명" />
@@ -696,17 +853,18 @@
     }
 
     function renderAll() {
+      ensureEpisodeSelection();
       el.workTitle.value = state.workTitle;
       el.workSubtitle.value = state.workSubtitle;
       el.toneSelect.value = state.tone;
       el.premise.value = state.premise;
       el.worldRule.value = state.worldRule;
-      el.manuscript.value = state.manuscript;
       el.ideaNote.value = state.ideaNote;
       renderKeywords();
       renderCharacters();
       renderEpisodes();
-      updateWordStat();
+      syncEpisodeEditor();
+      setActiveTab(state.activeTab, false);
     }
 
     function escapeHTML(value) {
@@ -739,6 +897,31 @@
       saveTimer = window.setTimeout(saveNow, SAVE_DELAY);
     }
 
+    function normalizeState() {
+      if (!Array.isArray(state.keywords)) state.keywords = [];
+      if (!Array.isArray(state.characters)) state.characters = [];
+      if (!Array.isArray(state.episodes)) state.episodes = [];
+      state.episodes = state.episodes.map((item) => ({
+        ...defaultEpisode(),
+        ...item,
+        id: String(item && item.id ? item.id : makeId("ep")),
+        manuscript: String(item && item.manuscript ? item.manuscript : "")
+      }));
+      if (typeof state.manuscript === "string" && state.manuscript.trim()) {
+        if (!state.episodes.length) state.episodes.push(defaultEpisode());
+        if (!state.episodes[0].manuscript.trim()) {
+          state.episodes[0].manuscript = state.manuscript;
+        }
+      }
+      if (!VALID_TABS.includes(state.activeTab)) state.activeTab = "overview";
+      if (typeof state.workTitle !== "string") state.workTitle = "";
+      if (typeof state.workSubtitle !== "string") state.workSubtitle = "";
+      if (typeof state.premise !== "string") state.premise = "";
+      if (typeof state.worldRule !== "string") state.worldRule = "";
+      if (typeof state.ideaNote !== "string") state.ideaNote = "";
+      ensureEpisodeSelection();
+    }
+
     function loadState() {
       try {
         const raw = localStorage.getItem(STORAGE_KEY);
@@ -746,9 +929,7 @@
         const parsed = JSON.parse(raw);
         if (!parsed || typeof parsed !== "object") return;
         Object.assign(state, parsed);
-        if (!Array.isArray(state.keywords)) state.keywords = [];
-        if (!Array.isArray(state.characters)) state.characters = [];
-        if (!Array.isArray(state.episodes)) state.episodes = [];
+        normalizeState();
       } catch (err) {
         console.warn(err);
       }
@@ -767,12 +948,25 @@
     }
 
     function bindEvents() {
-      ["workTitle", "workSubtitle", "premise", "worldRule", "manuscript", "ideaNote"].forEach((key) => {
+      el.tabButtons.forEach((btn) => {
+        btn.addEventListener("click", () => {
+          setActiveTab(btn.dataset.tab, true);
+        });
+      });
+
+      ["workTitle", "workSubtitle", "premise", "worldRule", "ideaNote"].forEach((key) => {
         el[key].addEventListener("input", () => {
           state[key] = el[key].value;
-          if (key === "manuscript") updateWordStat();
           queueSave();
         });
+      });
+
+      el.manuscript.addEventListener("input", () => {
+        const episode = getSelectedEpisode();
+        if (!episode) return;
+        episode.manuscript = el.manuscript.value;
+        updateWordStat();
+        queueSave();
       });
 
       el.toneSelect.addEventListener("change", () => {
@@ -824,9 +1018,12 @@
       });
 
       el.addEpisodeBtn.addEventListener("click", () => {
-        state.episodes.push(defaultEpisode());
+        const created = defaultEpisode();
+        state.episodes.push(created);
+        state.selectedEpisodeId = created.id;
         queueSave();
         renderEpisodes();
+        syncEpisodeEditor();
       });
 
       el.episodeList.addEventListener("input", (e) => {
@@ -837,6 +1034,9 @@
         const field = e.target.dataset.field;
         if (!field || !(field in item)) return;
         item[field] = e.target.value;
+        if (field === "title" && item.id === state.selectedEpisodeId) {
+          syncEpisodeEditor();
+        }
         queueSave();
       });
 
@@ -852,12 +1052,34 @@
       });
 
       el.episodeList.addEventListener("click", (e) => {
-        const btn = e.target.closest("[data-remove-episode]");
-        if (!btn) return;
-        const id = btn.dataset.removeEpisode;
-        state.episodes = state.episodes.filter((item) => item.id !== id);
-        queueSave();
+        const selectBtn = e.target.closest("[data-select-episode]");
+        if (selectBtn) {
+          state.selectedEpisodeId = selectBtn.dataset.selectEpisode;
+          renderEpisodes();
+          syncEpisodeEditor();
+          queueSave();
+          return;
+        }
+
+        const removeBtn = e.target.closest("[data-remove-episode]");
+        if (removeBtn) {
+          const id = removeBtn.dataset.removeEpisode;
+          state.episodes = state.episodes.filter((item) => item.id !== id);
+          if (state.selectedEpisodeId === id) state.selectedEpisodeId = "";
+          ensureEpisodeSelection();
+          queueSave();
+          renderEpisodes();
+          syncEpisodeEditor();
+          return;
+        }
+
+        const row = e.target.closest("[data-episode-id]");
+        if (!row) return;
+        if (e.target.closest("input,textarea,select,button")) return;
+        state.selectedEpisodeId = row.dataset.episodeId;
         renderEpisodes();
+        syncEpisodeEditor();
+        queueSave();
       });
 
       el.exportBtn.addEventListener("click", () => {
@@ -887,9 +1109,7 @@
             const data = parsed && typeof parsed === "object" && parsed.data ? parsed.data : parsed;
             if (!data || typeof data !== "object") throw new Error("invalid");
             Object.assign(state, data);
-            if (!Array.isArray(state.keywords)) state.keywords = [];
-            if (!Array.isArray(state.characters)) state.characters = [];
-            if (!Array.isArray(state.episodes)) state.episodes = [];
+            normalizeState();
             renderAll();
             saveNow();
           } catch (err) {
